# rust-mir-checker

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
apron-sys/: Cargo.toml  build.rs
src/: lib.rs
src/analysis/: callback.rs  crate_context.rs  diagnostics.rs  global_context.rs  wto.rs
src/analysis/analyzer/: analysis_trait.rs  numerical_analysis.rs
src/analysis/memory/: constant_value.rs  expression.rs  known_names.rs  path.rs  utils.rs
src/analysis/mir_visitor/: block_visitor.rs  body_visitor.rs  call_visitor.rs  type_visitor.rs
src/checker/: assertion_checker.rs
